@@ -1,6 +1,8 @@
 emumaster (0.1.1) unstable; urgency=low
 
   * icons are removable from home screen now
+  * accelerometer calibration
+  * keyboard configuration (gamepad mapping)
 
  -- elemental <mar.kazmierczak@gmail.com>  Tue, 13 Dec 2011 08:39:17 +0100
 
